[DDW-1076] Fix cancel hyperlink visibiliti for long wallet name

--- a/source/renderer/app/components/wallet/settings/WalletSettings.scss
+++ b/source/renderer/app/components/wallet/settings/WalletSettings.scss
@@ -12,6 +12,10 @@
     .SimpleFormField_label {
       color: var(--theme-input-label-color);
     }
+
+    .SimpleInput_input {
+      padding-right: 120px;
+    }
   }
 
   .deleteWalletLabel {
